--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -41,6 +41,6 @@
     aside {
         width: 45%;
         height: 6rem;
-        margin-left: .5rem 2vw;     
+        margin-left: .5rem;     
     }
 }
